Include bundled updater and config versioning
Bundle a standalone updater JAR into the client and add config/manifest-driven version handling. Build scripts (build.sh/build.ps1) now create Progressive-Java-Updater.jar and fold it into the client classes; CI stamps release versions from tag refs and pom version bumped to 1.7. ClientConfig now records and exposes a version label (writes/updates config.json, reads manifest), and GLRenderer shows a static version text instead of the old in‑client updater UI. ClientUpdater was refactored to extract/ensure the updater JAR beside the running client, consult the config.json manifest to avoid re-downloading identical releases, and launch the updater in a separate JVM with a reconstructed restart command. Added a new UpdateHelper class (GUI + CLI) that performs the actual replacement/restart logic when invoked by the updater JAR. Various run/build wrappers updated to require/expose the updater artifact and to report build outputs.